fix: use getFirst()